# voicemod-pro

./: .gitignore  build.mjs  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: deploy.yml
bien-hyper-sonic/: index.js  manifest.json
ios/: VoiceModModule.mm
native/: CMakeLists.txt
native-source/android/src/main/java/com/voicemod/: VoiceModPackage.java
native-source/cpp/: BiquadFilter.cpp  BiquadFilter.h  DSPUtils.h  PanSystem.cpp  PitchShifter.cpp  PitchShifter.h  Spatializer.h  VoiceModEngine.cpp  VoiceModEngine.h
native-source/jsi/: VoiceModHostModule.cpp
native/android/src/main/java/com/voicemod/: VoiceModModule.cpp  VoiceModModule.java
native/cpp/: LFO.cpp  LFO.h  Limiter.cpp  Limiter.h  PanSystem.h  ReverbEngine.cpp  ReverbEngine.h  Spatializer.cpp
native/jsi/: VoiceModHostModule.h
plugins/voicemod/: index.tsx  manifest.json
plugins/voicemod/components/: EffectSlider.tsx  PresetManager.tsx  VoiceModSettings.tsx
plugins/voicemod/native/: NativeVoiceMod.ts
src/: constants.ts  index.tsx  types.ts
src/components/: EffectSlider.tsx  PresetManager.tsx
